--- a/app/src/main/res/layout/activity_vehicle.xml
+++ b/app/src/main/res/layout/activity_vehicle.xml
@@ -69,54 +69,72 @@
 
     <ImageView
         android:id="@+id/img1"
-        android:layout_width="88dp"
-        android:layout_height="78dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="59dp"
-        android:layout_marginEnd="58dp"
-        android:layout_marginBottom="218dp"
-        android:onClick="uploadImage"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageView3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description"
-        app:srcCompat="@drawable/ic_launcher_foreground"
-        android:contentDescription="TODO" />
-
-    <ImageView
-        android:id="@+id/imageView3"
         android:layout_width="86dp"
         android:layout_height="81dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="56dp"
-        android:layout_marginEnd="53dp"
-        android:layout_marginBottom="62dp"
-        android:onClick="uploadImage"
-        app:layout_constraintBottom_toTopOf="@+id/postButton"
-        app:layout_constraintEnd_toStartOf="@+id/img3"
+
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="30dp"
+
+        android:contentDescription="TODO"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/UploadImageButton"
+        app:srcCompat="@drawable/ic_launcher_foreground" />
+
+    <ImageView
+        android:id="@+id/img2"
+        android:layout_width="86dp"
+        android:layout_height="81dp"
+        android:layout_marginStart="86dp"
+
+        android:layout_marginTop="30dp"
+        android:visibility="invisible"
         app:layout_constraintStart_toEndOf="@+id/img1"
-        app:layout_constraintTop_toBottomOf="@+id/description"
+        app:layout_constraintTop_toBottomOf="@+id/UploadImageButton"
         app:srcCompat="@drawable/ic_launcher_foreground" />
 
     <ImageView
         android:id="@+id/img3"
-        android:layout_width="82dp"
+        android:layout_width="86dp"
         android:layout_height="81dp"
-        android:layout_marginStart="53dp"
-        android:layout_marginTop="59dp"
-        android:onClick="uploadImage"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/description"
+
+        android:layout_marginStart="160dp"
+
+        android:layout_marginTop="18dp"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img2"
         app:srcCompat="@drawable/ic_launcher_foreground" />
 
     <Button
         android:id="@+id/postButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="157dp"
-        android:layout_marginTop="62dp"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="12dp"
         android:onClick="post"
         android:text="Post"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@+id/img3" />
+
+    <Button
+        android:id="@+id/UploadImageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="40dp"
+        android:onClick="ChooseImage"
+        android:text="Upload Image"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="53dp"
+        android:text="(2-3 Images)"
+        app:layout_constraintStart_toEndOf="@+id/UploadImageButton"
+        app:layout_constraintTop_toBottomOf="@+id/description" />
 </androidx.constraintlayout.widget.ConstraintLayout>
