--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,8 +31,8 @@
             android:layout_column="0"
             android:layout_gravity="fill"
             android:layout_margin="10dp"
-            android:onClick="vehicle"
-            android:tag="1"
+            android:onClick="showAd"
+            android:tag="Vehicle"
             app:srcCompat="@drawable/androidlogo" />
 
         <ImageButton
@@ -42,8 +42,8 @@
             android:layout_row="1"
             android:layout_column="1"
             android:layout_margin="10dp"
-            android:onClick="furniture"
-            android:tag="2"
+            android:onClick="showAd"
+            android:tag="Furniture"
             app:srcCompat="@drawable/androidlogo" />
 
         <ImageButton
@@ -53,8 +53,8 @@
             android:layout_row="0"
             android:layout_column="1"
             android:layout_margin="10dp"
-            android:onClick="electronics"
-            android:tag="3"
+            android:onClick="showAd"
+            android:tag="Electronics"
             app:srcCompat="@drawable/androidlogo" />
 
         <ImageButton
@@ -64,8 +64,8 @@
             android:layout_row="1"
             android:layout_column="0"
             android:layout_margin="10dp"
-            android:onClick="books"
-            android:tag="4"
+            android:onClick="showAd"
+            android:tag="Books"
             app:srcCompat="@drawable/androidlogo" />
 
         <ImageButton
@@ -75,8 +75,8 @@
             android:layout_row="2"
             android:layout_column="0"
             android:layout_margin="10dp"
-            android:onClick="sports"
-            android:tag="5"
+            android:onClick="showAd"
+            android:tag="Sports"
             app:srcCompat="@drawable/androidlogo" />
 
         <ImageButton
