--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,14 @@
         android:id="@+id/categories"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="10dp"
         android:columnCount="2"
         android:rowCount="3"
         app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <ImageButton
@@ -29,11 +28,10 @@
             android:layout_height="wrap_content"
             android:layout_row="0"
             android:layout_column="0"
-            android:layout_gravity="fill"
-            android:layout_margin="10dp"
-            android:onClick="showAd"
+            android:layout_margin="17dp"
+            android:background="@null"
             android:tag="Vehicle"
-            app:srcCompat="@drawable/androidlogo" />
+            app:srcCompat="@drawable/ic_android_black" />
 
         <ImageButton
             android:id="@+id/furnitureButton"
@@ -41,10 +39,11 @@
             android:layout_height="wrap_content"
             android:layout_row="1"
             android:layout_column="1"
-            android:layout_margin="10dp"
-            android:onClick="showAd"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="17dp"
+            android:background="@null"
             android:tag="Furniture"
-            app:srcCompat="@drawable/androidlogo" />
+            app:srcCompat="@drawable/ic_android_black" />
 
         <ImageButton
             android:id="@+id/electronicsButton"
@@ -52,10 +51,11 @@
             android:layout_height="wrap_content"
             android:layout_row="0"
             android:layout_column="1"
-            android:layout_margin="10dp"
-            android:onClick="showAd"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="17dp"
+            android:background="@null"
             android:tag="Electronics"
-            app:srcCompat="@drawable/androidlogo" />
+            app:srcCompat="@drawable/ic_android_black" />
 
         <ImageButton
             android:id="@+id/booksButton"
@@ -63,10 +63,11 @@
             android:layout_height="wrap_content"
             android:layout_row="1"
             android:layout_column="0"
-            android:layout_margin="10dp"
-            android:onClick="showAd"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="17dp"
+            android:background="@null"
             android:tag="Books"
-            app:srcCompat="@drawable/androidlogo" />
+            app:srcCompat="@drawable/ic_android_black" />
 
         <ImageButton
             android:id="@+id/sportsButton"
@@ -74,10 +75,11 @@
             android:layout_height="wrap_content"
             android:layout_row="2"
             android:layout_column="0"
-            android:layout_margin="10dp"
-            android:onClick="showAd"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="17dp"
+            android:background="@null"
             android:tag="Sports"
-            app:srcCompat="@drawable/androidlogo" />
+            app:srcCompat="@drawable/ic_android_black" />
 
         <ImageButton
             android:id="@+id/miscButton"
@@ -85,10 +87,11 @@
             android:layout_height="wrap_content"
             android:layout_row="02"
             android:layout_column="1"
-            android:layout_margin="10dp"
-            android:onClick="miscellaneous"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="17dp"
+            android:background="@null"
             android:tag="6"
-            app:srcCompat="@drawable/androidlogo" />
+            app:srcCompat="@drawable/ic_android_black" />
 
         <TextView
             android:id="@+id/textView1"
@@ -146,11 +149,13 @@
 
     </GridLayout>
 
+
     <GridLayout
         android:id="@+id/navigation"
-        android:layout_width="378dp"
-        android:layout_height="77dp"
-        android:layout_marginBottom="15dp"
+        android:layout_width="316dp"
+        android:layout_height="111dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginBottom="10dp"
         android:columnCount="5"
         android:rowCount="1"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -164,71 +169,59 @@
             android:layout_row="0"
             android:layout_column="0"
             android:layout_columnWeight="1"
-            android:layout_margin="10dp"
-
-            android:layout_marginTop="10dp"
-            android:onClick="chat"
-            app:srcCompat="@drawable/ic_launcher_background" />
-
-        <ImageButton
-            android:id="@+id/sellButton"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_row="0"
-            android:layout_column="1"
-            android:layout_columnWeight="1"
-            android:layout_margin="10dp"
-
-            android:layout_marginTop="10dp"
-            android:onClick="sell"
-            app:srcCompat="@drawable/ic_launcher_background" />
+            android:layout_marginTop="25dp"
+            android:layout_gravity="center_vertical"
+            android:background="@null"
+            android:src="@drawable/chat_logo" />
 
         <ImageButton
             android:id="@+id/newAdButton"
             android:layout_width="0dp"
-            android:layout_height="60dp"
+            android:layout_height="100dp"
             android:layout_row="0"
-            android:layout_column="2"
-            android:layout_columnWeight="1"
-            android:layout_margin="10dp"
+            android:layout_column="1"
+            android:layout_columnWeight="2"
+            android:layout_marginTop="5dp"
+            android:background="@null"
+            app:srcCompat="@drawable/pos_ad_logo" />
 
-            android:layout_marginTop="0dp"
-            android:onClick="newAd"
-            app:srcCompat="@drawable/ic_launcher_background" />
-
-        <ImageButton
-            android:id="@+id/myAdsButton"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_row="0"
-            android:layout_column="3"
-            android:layout_columnWeight="1"
-            android:layout_margin="10dp"
-
-            android:layout_marginTop="10dp"
-            android:onClick="myAds"
-            app:srcCompat="@drawable/ic_launcher_background" />
 
         <ImageButton
             android:id="@+id/myAccountButton"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_row="0"
-            android:layout_column="4"
+            android:layout_column="2"
             android:layout_columnWeight="1"
-            android:layout_margin="10dp"
-
-            android:layout_marginTop="10dp"
-            android:onClick="myAccount"
-            app:srcCompat="@drawable/ic_launcher_background"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:layout_marginTop="25dp"
+            android:layout_gravity="center_vertical"
+            android:background="@null"
+            android:src="@drawable/myaccount_logo" />
 
         <TextView
-            android:id="@+id/textViewe"
+            android:id="@+id/textViewChat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="0"
-            android:layout_column="4"
+            android:layout_column="0"
+            android:layout_gravity="center|bottom"
+            android:text="Chat" />
+
+        <TextView
+            android:id="@+id/textViewPostAd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:layout_gravity="center|bottom"
+            android:text="Post Ad" />
+
+        <TextView
+            android:id="@+id/textViewAcc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="2"
             android:layout_gravity="center|bottom"
             android:text="My Account" />
 
